TwitterMappingLab/doc/logfile.txt
Project documentation
<---- javadoc command: ---->
/Applications/BlueJ 3.1.7/BlueJ.app/Contents/Frameworks/jdk.framework/Versions/A/Contents/Home/bin/javadoc
-sourcepath
/Users/geoff/GitHub/unit3DecisionsLoops/TwitterMappingLab
-source
1.8
-classpath
/Applications/BlueJ 3.1.7/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Applications/BlueJ 3.1.7/BlueJ.app/Contents/Resources/Java/junit-4.8.2.jar:/Users/geoff/GitHub/unit3DecisionsLoops/TwitterMappingLab/libs/twitter4j-core-4.0.4.jar:/Applications/BlueJ 3.1.7/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Applications/BlueJ 3.1.7/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Applications/BlueJ 3.1.7/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Applications/BlueJ 3.1.7/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Users/geoff/GitHub/unit3DecisionsLoops/TwitterMappingLab
-d
/Users/geoff/GitHub/unit3DecisionsLoops/TwitterMappingLab/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/Applications/BlueJ 3.1.7/BlueJ.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
-doctitle
TwitterMappingLab
-windowtitle
TwitterMappingLab
-author
-version
-nodeprecated
-package
-link
http://download.oracle.com/javase/8/docs/api/
/Users/geoff/GitHub/unit3DecisionsLoops/TwitterMappingLab/TwitterMapper.java
/Users/geoff/GitHub/unit3DecisionsLoops/TwitterMappingLab/SentimentDictionary.java
<---- end of javadoc command ---->
Loading source file /Users/geoff/GitHub/unit3DecisionsLoops/TwitterMappingLab/TwitterMapper.java...
Loading source file /Users/geoff/GitHub/unit3DecisionsLoops/TwitterMappingLab/SentimentDictionary.java...
Constructing Javadoc information...
/Users/geoff/GitHub/unit3DecisionsLoops/TwitterMappingLab/TwitterMapper.java:30: error: cannot find symbol
    private ArrayList<State> states;
                      ^
  symbol:   class State
  location: class TwitterMapper
/Users/geoff/GitHub/unit3DecisionsLoops/TwitterMappingLab/TwitterMapper.java:88: error: cannot find symbol
    public void findTweetsForState( State state) throws TwitterException
                                    ^
  symbol:   class State
  location: class TwitterMapper
Standard Doclet version 1.8.0_74
Building tree for all the packages and classes...
Generating /Users/geoff/GitHub/unit3DecisionsLoops/TwitterMappingLab/doc/SentimentDictionary.html...
/Users/geoff/GitHub/unit3DecisionsLoops/TwitterMappingLab/SentimentDictionary.java:83: warning - @precondition is an unknown tag.
Generating /Users/geoff/GitHub/unit3DecisionsLoops/TwitterMappingLab/doc/TwitterMapper.html...
Generating /Users/geoff/GitHub/unit3DecisionsLoops/TwitterMappingLab/doc/package-frame.html...
Generating /Users/geoff/GitHub/unit3DecisionsLoops/TwitterMappingLab/doc/package-summary.html...
Generating /Users/geoff/GitHub/unit3DecisionsLoops/TwitterMappingLab/doc/package-tree.html...
Generating /Users/geoff/GitHub/unit3DecisionsLoops/TwitterMappingLab/doc/constant-values.html...
Building index for all the packages and classes...
Generating /Users/geoff/GitHub/unit3DecisionsLoops/TwitterMappingLab/doc/overview-tree.html...
Generating /Users/geoff/GitHub/unit3DecisionsLoops/TwitterMappingLab/doc/index-all.html...
Building index for all classes...
Generating /Users/geoff/GitHub/unit3DecisionsLoops/TwitterMappingLab/doc/allclasses-frame.html...
Generating /Users/geoff/GitHub/unit3DecisionsLoops/TwitterMappingLab/doc/allclasses-noframe.html...
Generating /Users/geoff/GitHub/unit3DecisionsLoops/TwitterMappingLab/doc/index.html...
Generating /Users/geoff/GitHub/unit3DecisionsLoops/TwitterMappingLab/doc/help-doc.html...
Generating /Users/geoff/GitHub/unit3DecisionsLoops/TwitterMappingLab/doc/stylesheet.css...
3 warnings
